# AVIS

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  _global.txt  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
configs/: cam_demo.json
core/: __init__.py  config.py
core/calibration/: __init__.py
core/detect/: __init__.py
core/evidence/: __init__.py
core/graph/: __init__.py
core/legal/: __init__.py
core/llm/: __init__.py
core/pipeline/: __init__.py
core/plates/: __init__.py
core/preprocess/: __init__.py
core/quality/: __init__.py
core/queue/: __init__.py
core/rules/: __init__.py
core/schemas/: __init__.py
core/storage/: __init__.py
devdocs/: architecture.md  data_flow.md  design_documentation.md  documentation.md  file_structure.md  schema_design.md
docs/: DEMO_SCRIPT.md  DESIGN.md  PROJECT_STATUS.md  ROADMAP.md
eval/: __init__.py  harness.py  metrics.py  run.py  sample_dataset.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/charts/: ByDayChart.jsx  (+3 more)
frontend/src/context/: RuntimeContext.jsx  ThemeContext.jsx
frontend/src/lib/: constants.js  format.js
frontend/src/pages/: AnalyticsPage.jsx  AnalyzePage.jsx  ReviewPage.jsx  SearchPage.jsx
tests/: conftest.py  test_detector.py  test_eval.py  test_graph.py  test_helmet.py  test_lights.py  test_pipeline.py  test_plates.py  test_quality.py  test_queue.py  test_rules.py  test_storage.py  test_zone_rules.py
(+17 files in other folders)
