[project]
name = "avis"
version = "0.1.0"
description = "Automated Violation Intelligence System (codename Gridlock)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# We deliberately use `class X(str, Enum)` with explicit values for stable JSON output.
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
